--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "村镇银行2.0",
+    "name" : "uni-app",
     "appid" : "__UNI__9AB5B58",
     "description" : "",
     "versionName" : "1.0.0",
